<resources>
    <string name="app_name">EasyFlow</string>
    <string name="useravatar">userAvatar</string>
    <string name="email">email</string>
    <string name="pasword">pasword</string>
    <string name="new_user_press_here_to_register">new user? press here to register.</string>
    <string name="forogt_password">forogt password</string>
    <string name="sign_in">Sign in</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recharge">Recharge</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username_text">username</string>
    <string name="phone_number_text">phone number</string>
    <string name="male_text">male</string>
    <string name="female_text">female</string>
    <string name="your_birth_date">your birth date</string>
    <string name="password_text">password</string>
    <string name="show_password_text">show password</string>
    <string name="register_text">Register</string>
    <string name="stay_signed_in_text">stay signed in</string>
    <string name="generate_qr_code">Generate Qr Code</string>
    <string name="view_my_tickets_history">view my tickets History</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="gender">Gender:</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="m">M</string>
    <string name="f">F</string>
    <string name="wallet_balance">your current balance: %d</string>
    <string name="save">save</string>
    <string name="start_a_trip">Start a Trip</string>
    <string name="plan_name">%s Plan</string>
    <string name="plan_owner">Offered by %s</string>
    <string name="plan_customers">eligible for %s</string>
    <string name="plan_duarion">Valid for %s day</string>
    <string name="max_passengers">maximum no of companions for each ticket: %s</string>
    <string name="trips_no">Number of Trips under this plan: %s</string>
    <string name="price_string">price: %s egp.</string>
    <string name="please_enter_the_number_of_passengers">Enter number of passengers</string>
    <string name="enter_the_number_of_passengers">Enter the number of passengers</string>
    <string name="_1">1</string>
    <string name="confirm">Confirm</string>
</resources>