<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.easyflow.appScreens.profile.ProfileViewModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@color/main_color"
        >

        <!-- Username field -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/username_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@={viewModel.username}" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- First name field -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.firstName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Last name field -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.lastName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email field -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.email}" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Phone number field -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/phone_number_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.phoneNumber}"
                android:inputType="number"
                android:digits="0123456789"
                android:maxLength="11" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Gender field -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:checked="@{viewModel.isMale()}"
                />

            <RadioButton
                android:id="@+id/female_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:checked="@{viewModel.isFemale()}"
                />


        </RadioGroup>

        <!-- Wallet balance field -->
        <TextView
            android:id="@+id/wallet_balance_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.getWalletBalance()}" />


        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            style="@style/button_style" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/change_password_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/button_style"
                android:layout_weight="0.5"
                android:text="change password"
                android:layout_marginEnd="4dp"
                />
            <Button
                android:id="@+id/update_pin_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/button_style"
                android:layout_weight="0.5"
                android:text="update pin"
                android:layout_marginStart="4dp"/>
        </LinearLayout>

    </LinearLayout>

</layout>